# forge

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  changes.md
anvil/: Cargo.toml  README.md
anvil/src/: cli.rs  config.rs  lib.rs  main.rs  util.rs
anvil/src/commands/: build.rs  docker.rs  install.rs  mod.rs  run.rs  workspace.rs
anvil/tests/: build_commands.rs  docker_commands.rs  installation.rs  tasks.rs  unit.rs
anvil/tests/tasks/: build_commands.rs  lint_commands.rs  workspace_commands.rs
anvil/tests/unit/: cli_tests.rs  config_tests.rs
ferrous/: Cargo.toml  PLAN.md  README.md
ferrous/config/: tools.json
ferrous/src/: agent.rs  cli.rs  config.rs  lib.rs  llm.rs  main.rs  plan.rs  prompt.rs  sessions.rs  tools.rs
ferrous/src/config/: config.rs  mod.rs  prompt.rs
ferrous/src/core/: agent.rs  index.rs  mod.rs  plan.rs  sessions.rs
ferrous/src/llm/: decoding.rs  llm.rs  manager.rs  mod.rs
ferrous/src/tools/: cargo.rs  discovery.rs  file.rs  git.rs  mod.rs  review.rs  shell.rs  utils.rs  validators.rs
ferrous/src/ui/: interface.rs  mod.rs  query.rs  render.rs  repl.rs  web.rs
ferrous/tests/: tasks.rs  unit.rs
ferrous/tests/tasks/: installation.rs
ferrous/tests/unit/: decoding_tests.rs  index_tests.rs  plan_tests.rs  prompt_tests.rs  repl_tests.rs  review_tests.rs  session_tests.rs  tool_utils_tests.rs  validators_test.rs
pulley/: Cargo.toml  README.md  example.pulley.toml
pulley/src/: config.rs  main.rs  repl.rs  rsync.rs
quench/examples/basic/: Cargo.toml
quench/examples/basic/i18n/: en-US.ftl  pl-PL.ftl
quench/examples/basic/src/: main.rs
quench/examples/quench-basic/: Cargo.toml
quench/examples/quench-basic/i18n/: en-US.ftl  pl-PL.ftl
quench/framework/: Cargo.toml
quench/framework/src/: lib.rs  prelude.rs
quench/framework/src/framework/: app.rs  mod.rs
quench/framework/src/framework/components/: header.rs  nav.rs
quench/framework/src/framework/dom/: events.rs  mod.rs  select.rs
quench/framework/src/framework/js/: locale.rs  theme.rs
quench/framework/src/framework/styles/common/: elements.rs  layout.rs  root.rs
quench/framework/src/framework/theme/: bootstrap_dark.rs  bootstrap_light.rs  default_light.rs  mod.rs
quench/framework/src/html/builder/: element.rs
riveter/: Cargo.toml  README.md
riveter/src/: cli.rs  config.rs  env.rs  lib.rs  main.rs  render.rs  repl.rs
riveter/src/templates/: cronjob.yaml.j2  deployment.yaml.j2  ingress.yaml.j2  ingressroute.yaml.j2  job.yaml.j2  middleware.yaml.j2  namespace.yaml.j2  pv.yaml.j2  pvc.yaml.j2  service.yaml.j2  serviceaccount.yaml.j2
riveter/tests/: installation.rs  unit.rs
riveter/tests/tasks/: installation.rs
riveter/tests/unit/: config_tests.rs  env_tests.rs  render_tests.rs
src/: main.rs
warehouse/service/: .gitignore  Cargo.toml
warehouse/service/i18n/: en-US.ftl
warehouse/service/src/: main.rs
warehouse/service/src/domain/: docker_error.rs  mod.rs
warehouse/service/src/middleware/: auth.rs  limits.rs
warehouse/service/src/routers/: health.rs  mod.rs
warehouse/service/src/routers/admin/: mod.rs
warehouse/service/src/routers/admin/docker/: gc.rs
warehouse/service/src/routers/docker/: mod.rs  token.rs
warehouse/service/src/routers/docker/blob/: cancel_upload.rs  check_exists.rs  complete_upload.rs  get_upload_status.rs  retrieve.rs  start_upload.rs  upload_chunk.rs
warehouse/service/src/routers/docker/manifest/: delete_image.rs  get_image.rs  put_image.rs
warehouse/service/src/routers/docker/registry/: catalog.rs  check.rs  mod.rs  storage.rs  tags.rs
warehouse/service/src/routers/ui/: common.rs  mod.rs
warehouse/service/src/routers/ui/pages/: auth.rs  catalog.rs  tags.rs
warehouse/warehouse-cli/: Cargo.toml
warehouse/warehouse-cli/src/: application.rs  cli.rs  config.rs  docker_api.rs  domain.rs  main.rs  registry_api.rs
warehouse/warehouse-cli/src/api/: admin_api.rs  crates_api.rs  mod.rs
warehouse/warehouse-service/: Cargo.toml
warehouse/warehouse-service/i18n/: en-US.ftl
warehouse/warehouse-service/src/: main.rs
warehouse/warehouse-service/src/domain/: jwt.rs
warehouse/warehouse-service/src/middleware/: auth.rs  limits.rs  logger.rs  mod.rs
warehouse/warehouse-service/src/routers/: crates.rs  mod.rs
warehouse/warehouse-service/src/routers/admin/: mod.rs
warehouse/warehouse-service/src/routers/admin/crates/: gc.rs
warehouse/warehouse-service/src/routers/admin/docker/: gc.rs
warehouse/warehouse-service/src/routers/crates/: mod.rs
warehouse/warehouse-service/src/routers/crates/index/: mod.rs
warehouse/warehouse-service/src/routers/crates/ops/: download.rs  mod.rs  publish.rs  unyank.rs  yank.rs
warehouse/warehouse-service/src/routers/crates/owners/: mod.rs
warehouse/warehouse-service/src/routers/crates/search/: mod.rs
warehouse/warehouse-service/src/routers/docker/: mod.rs  token.rs
warehouse/warehouse-service/src/routers/docker/blob/: cancel_upload.rs  check_exists.rs  complete_upload.rs  get_upload_status.rs  mod.rs  retrieve.rs  start_upload.rs  upload_chunk.rs
warehouse/warehouse-service/src/routers/docker/manifest/: check_exists.rs  delete_image.rs  get_image.rs  mod.rs  put_image.rs
warehouse/warehouse-service/src/routers/docker/registry/: catalog.rs  check.rs  mod.rs  tags.rs
warehouse/warehouse-service/src/routers/ui/: common.rs  mod.rs
warehouse/warehouse-service/src/routers/ui/common/: crates_js.rs  docker_js.rs  mod.rs  (+1 more)
welder/: Cargo.toml  agent.md  agent.toml  build.rs
welder/config/: allowlists.toml
welder/samples/: agent.toml  editorial_pipeline.toml  product_launch_pipeline.toml
welder/src/: main.rs  ui.rs
welder/src/backend/: mod.rs  ollama.rs
welder/src/config/: allowlists.rs  app_config.rs  mod.rs  workflow.rs
welder/src/engine/: executor.rs  mod.rs  tools.rs
welder/src/model/: caller.rs
workspace-tools/: Cargo.toml
workspace-tools/src/: cli.rs  lib.rs  main.rs
workspace-tools/src/commands/: lint.rs  workspace.rs
workspace-tools/tests/: build_commands.rs  docker_commands.rs  installation.rs  lint_commands.rs  workspace_commands.rs
(+44 files in other folders)
