[workspace]
members = [
    "anvil",
    "ferrous",
    "riveter",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Paweł Walus <pawel.walus@protonmail.com>"]
homepage = "https://github.com/lorehaven/build-tools"
repository = "https://github.com/lorehaven/build-tools"
license = "MIT"
readme = "README.md"

[workspace.dependencies.anyhow]
version = "1.0"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.clap]
version = "4.5"
features = ["derive"]

[workspace.dependencies.colored]
version = "3"

[workspace.dependencies.dotenvy]
version = "0.15"

[workspace.dependencies.futures-util]
version = "0.3"

[workspace.dependencies.minijinja]
version = "2.14"
features = ["loader", "serde"]

[workspace.dependencies.once_cell]
version = "1.21"

[workspace.dependencies.regex]
version = "1.12"

[workspace.dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "stream", "rustls"]

[workspace.dependencies.rustyline]
version = "17.0"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0"

[workspace.dependencies.serde_yaml]
version = "0.9.33"

[workspace.dependencies.syntect]
version = "5.3"

[workspace.dependencies.tantivy]
version = "0.25"

[workspace.dependencies.tempfile]
version = "3"

[workspace.dependencies.tokio]
version = "1.49"
features = ["full"]

[workspace.dependencies.toml]
version = "0.9"

[workspace.dependencies.trie-rs]
version = "0.4"

[workspace.dependencies.uuid]
version = "1.20"
features = ["v4", "fast-rng", "serde"]

[workspace.dependencies.which]
version = "8.0"

[workspace.dependencies.walkdir]
version = "2.5"
