[workspace]
members = [
    "anvil",
    "quench",
    "quench/examples/*",
    "riveter",
    "welder",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Paweł Walus <pawel.walus@protonmail.com>"]
homepage = "https://github.com/lorehaven/forge"
repository = "https://github.com/lorehaven/forge"
license = "MIT"
readme = "README.md"

[workspace.dependencies.adk-core]
version = "0.3"
default-features = false

[workspace.dependencies.adk-model]
version = "0.3"
default-features = false

[workspace.dependencies.anyhow]
version = "1.0"

[workspace.dependencies.async-trait]
version = "0.1"

[workspace.dependencies.clap]
version = "4.5"
features = ["derive"]

[workspace.dependencies.dotenvy]
version = "0.15"

[workspace.dependencies.fluent-syntax]
version = "0.12"

[workspace.dependencies.futures]
version = "0.3"

[workspace.dependencies.futures-util]
version = "0.3"

[workspace.dependencies.html5ever]
version = "0.38"

[workspace.dependencies.markup5ever_rcdom]
version = "0.38"

[workspace.dependencies.minijinja]
version = "2.14"
features = ["loader", "serde"]

[workspace.dependencies.regex]
version = "1.12"

[workspace.dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "stream", "rustls"]

[workspace.dependencies.rustyline]
version = "17.0"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0"

[workspace.dependencies.serde_yaml]
version = "0.9.33"

[workspace.dependencies.strum]
version = "0.27"

[workspace.dependencies.strum_macros]
version = "0.27"

[workspace.dependencies.thiserror]
version = "2.0"

[workspace.dependencies.tokio]
version = "1.49"
features = ["full"]

[workspace.dependencies.toml]
version = "1.0"

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.uuid]
version = "1.20"
features = ["v4", "fast-rng", "serde"]

[workspace.dependencies.which]
version = "8.0"

[workspace.dependencies.walkdir]
version = "2.5"
