[workspace]
members = [
    "anvil",
    "quench/framework",
    "quench/examples/*",
    "riveter",
    "warehouse/*",
    "welder",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Paweł Walus <pawel.walus@protonmail.com>"]
homepage = "https://github.com/lorehaven/forge"
repository = "https://github.com/lorehaven/forge"
license = "MIT"
readme = "README.md"

[workspace.dependencies.actix-web]
version = "4.13"
features = ["rustls-0_23"]

[workspace.dependencies.adk-core]
version = "0.3"
default-features = false

[workspace.dependencies.adk-model]
version = "0.3"
default-features = false

[workspace.dependencies.anyhow]
version = "1.0"

[workspace.dependencies.async-trait]
version = "0.1"

[workspace.dependencies.axum]
version = "0.8"
features = ["json"]

[workspace.dependencies.base64]
version = "0.22"

[workspace.dependencies.chrono]
version = "0.4"

[workspace.dependencies.clap]
version = "4.5"
features = ["derive"]

[workspace.dependencies.crossterm]
version = "0.29"

[workspace.dependencies.dotenvy]
version = "0.15"

[workspace.dependencies.envmnt]
version = "0.10"

[workspace.dependencies.fluent-syntax]
version = "0.12"

[workspace.dependencies.futures]
version = "0.3"

[workspace.dependencies.futures-util]
version = "0.3"

[workspace.dependencies.html5ever]
version = "0.38"

[workspace.dependencies.jsonwebtoken]
version = "10.3"
features = ["rust_crypto"]

[workspace.dependencies.markup5ever_rcdom]
version = "0.38"

[workspace.dependencies.minijinja]
version = "2.15"
features = ["loader", "serde"]

[workspace.dependencies.quench]
path = "quench/framework"

[workspace.dependencies.regex]
version = "1.12"

[workspace.dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "stream", "rustls"]

[workspace.dependencies.rustls]
version = "0.23"

[workspace.dependencies.rustls-pemfile]
version = "2"

[workspace.dependencies.rustyline]
version = "17.0"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0"

[workspace.dependencies.serde_yaml]
version = "0.9.34"

[workspace.dependencies.sha2]
version = "0.10"

[workspace.dependencies.strum]
version = "0.27"

[workspace.dependencies.strum_macros]
version = "0.27"

[workspace.dependencies.thiserror]
version = "2.0"

[workspace.dependencies.tokio]
version = "1.49"
features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"]

[workspace.dependencies.toml]
version = "1.0"

[workspace.dependencies.tower-http]
version = "0.6"
features = ["fs"]

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.tracing-subscriber]
version = "0.3"

[workspace.dependencies.utoipa]
version = "5.4"
features = ["macros"]

[workspace.dependencies.utoipa-swagger-ui]
version = "9.0"
features = ["actix-web"]

[workspace.dependencies.uuid]
version = "1.21"
features = ["v4"]

[workspace.dependencies.walkdir]
version = "2.5"

[workspace.dependencies.which]
version = "8.0"
