[package]
name = "anvil"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
description = "Anvil CLI - workspace build tools for cargo projects"
keywords = ["development", "tools"]
categories = ["development-tools"]
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "anvil"
path = "src/main.rs"

[lib]
name = "anvil"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
