[package]
name = "ferrous"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Ferrous – fast, local coding assistant powered by Rust + llama.cpp server."
keywords = ["development", "tools"]
categories = ["development-tools"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

exclude = [
    "**/*.rs.bk",
    ".gitignore",
    "target",
    "Cargo.lock",
]

[[bin]]
name = "ferrous"
path = "src/main.rs"

[lib]
name = "ferrous"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
once_cell.workspace = true
reqwest.workspace = true
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
syntect.workspace = true
tokio.workspace = true
toml.workspace = true
walkdir.workspace = true
