[package]
name = "pulley"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Pulley CLI - sync/backup jobs powered by rsync"
keywords = ["development", "tools"]
categories = ["development-tools"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "pulley"
path = "src/main.rs"

[dependencies]
rustyline.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
