[package]
name = "riveter"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
minijinja.workspace = true
regex.workspace = true
serde_yaml.workspace = true

