[package]
name = "workspace-tools"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Workspace Tools CLI"
keywords = ["development", "tools"]
categories = ["development-tools"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "wst"
path = "src/main.rs"

[lib]
name = "workspace_tools"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
which.workspace = true
