[package]
name = "quench"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Quench - simple web ui framework"
keywords = ["development", "tools"]
categories = ["development-tools"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
name = "quench"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
fluent-syntax = { workspace = true }
html5ever = { workspace = true }
markup5ever_rcdom = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
