[package]
name = "warehouse-service"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
description = "Warehouse - storage service"
keywords = ["development", "tools"]
categories = ["development-tools"]
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "warehouse-app"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
envmnt = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
