[package]
name = "quench-example-basic"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
description = "Quench - sample app"
keywords = ["development", "tools"]
categories = ["development-tools"]
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "quench-example-basic"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
quench = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
