[package]
name = "quench-basic"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Quench - sample app"
keywords = ["development", "tools"]
categories = ["development-tools"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[[bin]]
name = "quench-example"
path = "src/main.rs"

[dependencies]
quench = { path = "../.." }

axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
